--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <a href="contact.html">Contact</a>
   </nav>
   <div class="container">
-    <img src="poster.png" alt="Portrait Poster" class="poster">
+    <img src="Red and White Modern Truck Rental Services Instagram Post.png
+" alt="Portrait Poster" class="poster">
     <h2>Our Services</h2>
     <div class="services">
       <div class="service-box">
