--- a/checkout.html
+++ b/checkout.html
@@ -164,7 +164,7 @@
     <label for="payment-method">Payment Method:</label>
     <select id="payment-method" required>
       <option value="" disabled selected>Select payment method</option>
-      <option value="Cash on Delivery">Cash on Delivery</option>
+<!--       <option value="Cash on Delivery">Cash on Delivery</option> -->
       <option value="Easypaisa">Easypaisa</option>
       <option value="JazzCash">JazzCash</option>
     </select>
