--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Italian Mobile Shop</title>
+  <meta name="description" content="Fast & Reliable Mobile Repair Services. Shop the latest mobile accessories and devices." />
+  <meta name="keywords" content="mobile, repair, accessories, smartphones, smartwatches, earbuds, power bank" />
+  <meta name="author" content="Italian Mobile Shop" />
+  <link rel="icon" href="titlelogo.avif" type="image/x-icon">
   <style>
     body {
       margin: 0;
