--- a/checkout.html
+++ b/checkout.html
@@ -161,6 +161,9 @@
     <label for="address">Delivery Address:</label>
     <textarea id="address" rows="3" required></textarea>
 
+ <label for="number">Phone Number:</label>
+    <input type="number" id="number" required />
+
     <label for="payment-method">Payment Method:</label>
     <select id="payment-method" required>
       <option value="" disabled selected>Select payment method</option>
@@ -230,9 +233,10 @@
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
       const address = document.getElementById('address').value.trim();
+      const number = document.getElementById('number').value.trim();
       const paymentMethod = paymentSelect.value;
 
-      if (!name || !email || !address || !paymentMethod) {
+      if (!name || !email || !address || !number || !paymentMethod) {
         alert('Please fill all fields!');
         return;
       }
@@ -249,6 +253,7 @@
         name,
         email,
         address,
+        number,
         paymentMethod,
         cartItems: cart,
         totalAmount: cartTotal,
