--- a/index.html
+++ b/index.html
@@ -223,37 +223,37 @@
     <div class="product-box">
       <img src="micpic2.jpg" alt="ORIGINAL BM800 Condenser Microphone KIT" />
       <h3>ORIGINAL BM800 Condenser Microphone KIT</h3>
-      <p class="price">Rs. 1000</p>
+      <p class="price">Rs. 16000</p>
       <button class="btn" onclick="addToCart('ORIGINAL BM800 Condenser Microphone KIT', 1000)">Add to Cart</button>
     </div>
-    <div class="product-box">
+<!--     <div class="product-box">
       <img src="7+.jpg" alt="Iphone 7 Plus" />
       <h3>Iphone 7 Plus</h3>
       <p class="price">Rs. 1100</p>
       <button class="btn" onclick="addToCart('Iphone 7 Plus', 1100)">Add to Cart</button>
-    </div>
+    </div> -->
     <div class="product-box">
       <img src="airpods.jpg" alt="Bluetooth Earbuds" />
       <h3>Bluetooth Earbuds</h3>
-      <p class="price">Rs. 2300</p>
+      <p class="price">Rs. 2000/p>
       <button class="btn" onclick="addToCart('Bluetooth Earbuds', 2300)">Add to Cart</button>
     </div>
     <div class="product-box">
       <img src="5in1watch.jpg" alt="5in1 Ultra Smart Watch" />
-      <h3>5in1 Ultra Smart Watch</h3>
-      <p class="price">Rs. 1500</p>
+      <h3>7in1 Ultra Smart Watch</h3>
+      <p class="price">Rs. 6000</p>
       <button class="btn" onclick="addToCart('5in1 Ultra Smart Watch', 1500)">Add to Cart</button>
     </div>
     <div class="product-box">
       <img src="powerbank.jpg" alt="Power Bank" />
-      <h3>Power Bank</h3>
-      <p class="price">Rs. 1200</p>
+      <h3>Power Bank 10000 MAH</h3>
+      <p class="price">Rs. 4000</p>
       <button class="btn" onclick="addToCart('Power Bank', 1200)">Add to Cart</button>
     </div>
     <div class="product-box">
       <img src="cooling fan.jpg" alt="CoolPad for Phones" />
       <h3>CoolPad for Phones</h3>
-      <p class="price">Rs. 800</p>
+      <p class="price">Rs. 5500/p>
       <button class="btn" onclick="addToCart('CoolPad for Phones', 800)">Add to Cart</button>
     </div>
   </div>
