--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
         <div class="contact-info">
             <p><strong>Address:</strong> Camping ground Opposite Shandar Dairy near CDC College, lalamusa</p>
             <p><strong>Phone:</strong> +923457195801</p>
-            <p><strong>Email:</strong> hussnainzille1@gmail.com</p>
+            <p><strong>Email:</strong> italianmobileshop@gmail.com</p>
         </div>
     </div>
     <footer>
