--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <div class="product-box">
       <img src="airpods.jpg" alt="Bluetooth Earbuds" />
       <h3>Bluetooth Earbuds</h3>
-      <p class="price">Rs. 2000/p>
+      <p class="price">Rs. 2000</p>
       <button class="btn" onclick="addToCart('Bluetooth Earbuds', 2300)">Add to Cart</button>
     </div>
     <div class="product-box">
